# arco

./: .dockerignore  .editorconfig  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cloudrun  Dockerfile.local-uat  GOVERNANCE.md  LICENSE  LICENSE-MIT  MAINTAINERS.md  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  buf.yaml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/arco-api/: Cargo.toml  openapi.json
crates/arco-api/src/: audit.rs  auth.rs  compactor_client.rs  config.rs  context.rs  control_plane_transactions.rs  error.rs  grpc_transactions.rs  grpc_transactions_tests.rs  lib.rs  main.rs  metrics.rs  openapi.rs  orchestration_compaction.rs  parquet_table.rs  paths.rs  rate_limit.rs  redaction.rs  server.rs  system_tables.rs
crates/arco-api/tests/: api_integration.rs  browser_e2e.rs  catalog_inventory_api.rs  control_plane_transactions_api.rs  openapi_contract.rs  openapi_orchestration_routes.rs  orchestration_api_tests.rs  orchestration_parity_gates_m1.rs  orchestration_schedule_e2e_tests.rs  root_transaction_protocol.rs  system_tables_api.rs  task_token_contract_tests.rs  visible_contracts.rs
crates/arco-catalog/: Cargo.toml
crates/arco-catalog/benches/: catalog_lookup.rs
crates/arco-catalog/src/: asset.rs  compactor.rs  credential_vending.rs  error.rs  event_writer.rs  idempotency.rs  lib.rs  lock.rs  manifest.rs  metrics.rs  parquet_util.rs  read_model.rs  reader.rs  reconciler.rs  search_tombstone.rs  state.rs  state_store.rs  sync_compactor.rs  tier1_compactor.rs  tier1_events.rs  tier1_snapshot.rs  tier1_state.rs  tier1_writer.rs  write_options.rs  writer.rs
crates/arco-catalog/tests/: authz_decisions.rs  concurrent_writers.rs  credential_vending_decisions.rs  failure_injection.rs  metastore_product_surface.rs  metastore_replay_publication.rs  metastore_scope_contracts.rs  metastore_scope_replay.rs  path_contracts.rs  path_governance.rs  permission_compilation.rs  protocol_invariants.rs  public_asset_api.rs  schema_contracts.rs  state_store_current_adapter.rs
crates/arco-cli/: Cargo.toml
crates/arco-cli/src/: client.rs  lib.rs  main.rs
crates/arco-compactor/: Cargo.toml
crates/arco-compactor/src/: anti_entropy.rs  main.rs  metrics.rs  notification_consumer.rs  sync_compact.rs
crates/arco-core/: Cargo.toml
crates/arco-core/examples/: basic_usage.rs
crates/arco-core/src/: audit.rs  backpressure.rs  canonical_json.rs  catalog_event.rs  catalog_paths.rs  control_plane_scope.rs  control_plane_transactions.rs  error.rs  flow_paths.rs  id.rs  internal_oidc.rs  lib.rs  lock.rs  observability.rs  orchestration_compaction.rs  partition.rs  publish.rs  repair_backlog.rs  scoped_storage.rs  storage.rs  storage_keys.rs  storage_traits.rs  sync_compact.rs  table_format.rs  task_tokens.rs  tenant.rs
crates/arco-core/tests/: canonical_json_golden.rs  control_plane_scope.rs  control_plane_transaction_contracts.rs  control_plane_transaction_paths_contracts.rs  flow_paths_contracts.rs  integration.rs  lock_protocol_contract.rs  provider_capability_matrix_contract.rs  public_api_contracts.rs  publish_protocol_contract.rs  root_ownership_iam_contract.rs  storage_backend_conformance.rs  table_format_contracts.rs  ui.rs
crates/arco-delta/: Cargo.toml
crates/arco-delta/src/: coordinator.rs  error.rs  lib.rs  types.rs
crates/arco-delta/tests/: idempotency_replay.rs
crates/arco-flow/: Cargo.toml
crates/arco-flow-worker/: Cargo.toml
crates/arco-flow-worker/src/: lib.rs  main.rs
crates/arco-flow-worker/tests/: service_smoke.rs
crates/arco-flow/benches/: plan_generation.rs
crates/arco-flow/src/: compaction_client.rs  dag.rs  error.rs  events.rs  lib.rs  metrics.rs  outbox.rs  paths.rs  plan.rs  run.rs  runner.rs  scheduler.rs  task.rs  task_key.rs
crates/arco-flow/tests/: compaction_client_tests.rs  fingerprint_golden.rs  integration.rs  orchestration_automation_tests.rs  orchestration_correctness_tests.rs  orchestration_dispatch_tests.rs  orchestration_event_log_tests.rs  orchestration_event_tests.rs  orchestration_flow_service_compaction_tests.rs  orchestration_parity_gates_m1.rs  orchestration_parity_gates_m2.rs  orchestration_parity_gates_m3.rs  orchestration_proto_mapping_tests.rs  orchestration_protocol_invariants.rs  orchestration_rebuild_dr.rs  orchestration_runtime_e2e_tests.rs  orchestration_schedule_e2e_tests.rs  orchestration_schema_contracts.rs  orchestration_schema_tests.rs  orchestration_selection_tests.rs  orchestration_sensor_e2e_tests.rs  orchestration_sensor_tests.rs  orchestration_system_table_paths.rs  planning_compiler_tests.rs  property_tests.rs  run_bridge_controller_tests.rs  runtime_observability_tests.rs  worker_dispatch_auth_tests.rs  worker_dispatch_envelope_tests.rs
crates/arco-iceberg/: Cargo.toml
crates/arco-iceberg/src/: audit.rs  commit.rs  context.rs  coordinator.rs  error.rs  events.rs  gc.rs  idempotency.rs  lib.rs  metrics.rs  openapi.rs  paths.rs  pointer.rs  pointer_store.rs  reconciler.rs  router.rs  schema_projection.rs  state.rs  transactions.rs
crates/arco-iceberg/tests/: audit_wiring.rs  commit_flow.rs  config_integration.rs  crate_structure.rs  credential_vending.rs  openapi_compliance.rs  reconciliation_tests.rs  roundtrip.rs
crates/arco-integration-tests/: Cargo.toml
crates/arco-integration-tests/src/: lib.rs
crates/arco-integration-tests/tests/: catalog_flow.rs  catalog_idempotency.rs  datafusion_query_data.rs  delta_commit_coordinator.rs  delta_engine_smoke.rs  iam_smoke.rs  iceberg_rest_catalog.rs  ledger_namespace.rs  local_pipeline_uat.rs  orchestration_external_worker_e2e.rs  unity_catalog_smoke.rs  user_acceptance_pipeline.rs
crates/arco-proto/: Cargo.toml  build.rs
crates/arco-proto/src/: codec.rs  lib.rs  (+2 more)
crates/arco-test-utils/: Cargo.toml
crates/arco-uc/: Cargo.toml
crates/arco-worker-contract/: Cargo.toml  README.md
python/: README.md  pyproject.toml
python/arco/: README.md  __init__.py  decorator.py  pyproject.toml  ruff.toml
tools/xtask/: Cargo.toml
(+871 files in other folders)
