[workspace]
resolver = "2"
members = [
    "crates/arco-core",
    "crates/arco-catalog",
    "crates/arco-flow",
    "crates/arco-api",
    "crates/arco-proto",
    "crates/arco-compactor",
    "crates/arco-cli",
    "crates/arco-iceberg",
    "crates/arco-test-utils",
    "crates/arco-integration-tests",
    "tools/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/daxis-io/arco"
homepage = "https://arco.dev"
documentation = "https://docs.rs/arco"
keywords = ["lakehouse", "catalog", "orchestration", "data", "serverless"]
categories = ["database", "data-structures"]
authors = ["Daxis <engineering@daxis.io>"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Critical denies - no silent failures
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Cargo lints: this is a workspace with multiple internal crates; don't require publish-grade metadata.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_const_for_fn = "allow"
# Warnings for common issues
indexing_slicing = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
# Allow where justified (with comments)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging and tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics (OpenTelemetry-compatible)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Rate limiting
governor = "0.6"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
humantime-serde = "1"

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = { version = "1", features = ["serde"] }

# Hashing and encoding
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
base32 = "0.5"

# Graph algorithms
petgraph = "0.7"

# Data formats
parquet = { version = "54", features = ["async"] }
arrow = { version = "54", features = ["chrono-tz"] }
bytes = "1"
iceberg = "0.6"
iceberg-catalog-rest = "0.6"
serde_jcs = "0.1"

# HTTP/gRPC
axum = "0.8"
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tonic = "0.14"
prost = "0.13"
prost-types = "0.13"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# GCP authentication
gcp_auth = "0.12"

# Cloud storage
object_store = { version = "0.11", features = ["gcp", "aws", "azure"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
tempfile = "3"
trybuild = "1.0"

# Build dependencies
prost-build = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = true

[profile.bench]
debug = true
