[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arco"
version = "0.1.0"
description = "Arco Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
authors = [{ name = "Daxis", email = "dev@daxis.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
