[package]
name = "arco-api"
description = "HTTP/gRPC composition layer for Arco: authentication, routing, and service wiring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
full = ["gcp", "aws", "azure"]
gcp = ["arco-core/gcp", "arco-catalog/gcp", "arco-flow/gcp"]
aws = ["arco-core/aws", "arco-catalog/aws", "arco-flow/aws"]
azure = ["arco-core/azure", "arco-catalog/azure", "arco-flow/azure"]

[dependencies]
arco-core = { path = "../arco-core" }
arco-catalog = { path = "../arco-catalog" }
arco-flow = { path = "../arco-flow" }
arco-iceberg = { path = "../arco-iceberg" }
arco-proto = { path = "../arco-proto" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }

# gRPC
tonic = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# IDs
ulid = { workspace = true }

# Hashing/encoding
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Auth
jsonwebtoken = "9"

# OpenAPI
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
arco-test-utils = { path = "../arco-test-utils" }
duckdb = { version = "1.4.3", features = ["parquet"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
