[package]
name = "arco-api"
description = "HTTP/gRPC composition layer for Arco: authentication, routing, and service wiring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["jwt-aws-lc"]
full = ["gcp", "aws", "azure", "jsonwebtoken/use_pem"]
gcp = [
    "arco-core/gcp",
    "arco-catalog/gcp",
    "arco-flow/gcp",
    "arco-iceberg/gcp",
    "arco-uc/gcp",
]
aws = ["arco-core/aws", "arco-catalog/aws", "arco-flow/aws", "arco-uc/aws"]
azure = ["arco-core/azure", "arco-catalog/azure", "arco-flow/azure", "arco-uc/azure"]
jwt-aws-lc = [
    "arco-core/jwt-aws-lc",
    "arco-catalog/jwt-aws-lc",
    "arco-delta/jwt-aws-lc",
    "arco-flow/jwt-aws-lc",
    "arco-iceberg/jwt-aws-lc",
    "arco-uc/jwt-aws-lc",
    "jsonwebtoken/aws_lc_rs",
    "jsonwebtoken/use_pem",
]
jwt-rust-crypto = [
    "arco-core/jwt-rust-crypto",
    "arco-catalog/jwt-rust-crypto",
    "arco-delta/jwt-rust-crypto",
    "arco-flow/jwt-rust-crypto",
    "arco-iceberg/jwt-rust-crypto",
    "arco-uc/jwt-rust-crypto",
    "jsonwebtoken/rust_crypto",
    "jsonwebtoken/use_pem",
]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }
arco-catalog = { path = "../arco-catalog", default-features = false }
arco-delta = { path = "../arco-delta", default-features = false }
arco-flow = { path = "../arco-flow", default-features = false, features = ["http-client"] }
arco-iceberg = { path = "../arco-iceberg", default-features = false }
arco-uc = { path = "../arco-uc", default-features = false }
arco-proto = { path = "../arco-proto" }
arco-worker-contract = { path = "../arco-worker-contract" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
arrow = { workspace = true }
arrow-json = { workspace = true }
parquet = { workspace = true }
datafusion = "46"

# IDs
ulid = { workspace = true }
uuid = { workspace = true }

# Hashing/encoding
base64 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Time
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Auth
jsonwebtoken = { version = "10", default-features = false }

# OpenAPI
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
arco-test-utils = { path = "../arco-test-utils", default-features = false }
duckdb = { version = "1.10502.0", features = ["parquet"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
