[package]
name = "arco-cli"
description = "Command-line interface for Arco orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[[bin]]
name = "arco"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Output formatting
tabled = "0.17"
colored = "2"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
