[package]
name = "arco-compactor"
description = "Compaction binary for Arco: merges Tier 2 events into Tier 1 snapshots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "arco-compactor"
path = "src/main.rs"

[features]
default = ["jwt-aws-lc"]
gcp = ["arco-core/gcp", "arco-catalog/gcp"]
aws = ["arco-core/aws", "arco-catalog/aws"]
azure = ["arco-core/azure", "arco-catalog/azure"]
jwt-aws-lc = ["arco-core/jwt-aws-lc", "arco-catalog/jwt-aws-lc"]
jwt-rust-crypto = ["jwt-aws-lc"]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }
arco-catalog = { path = "../arco-catalog", default-features = false }

# Async runtime
tokio = { workspace = true }

# HTTP
axum = { workspace = true }
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# IDs
ulid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
