[package]
name = "arco-core"
description = "Core abstractions for Arco: types, storage traits, tenant context, and shared primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
full = ["gcp", "aws", "azure"]
gcp = []
aws = []
azure = []
test-utils = ["dep:proptest", "dep:tempfile"]
sync-compaction = []

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging and observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# IDs
uuid = { workspace = true }
ulid = { workspace = true }

# Time
chrono = { workspace = true }

# Bytes
bytes = { workspace = true }

# Encoding
base64 = { workspace = true }
hex = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Optional test utilities
proptest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Cloud object storage integration (GCS/S3/Azure) via `object_store`.
object_store = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
trybuild = { workspace = true }
