[package]
name = "arco-delta"
description = "Delta Lake support for Arco (commit coordination and log helpers)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arco-core = { path = "../arco-core" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
