[package]
name = "arco-delta"
description = "Delta Lake support for Arco (commit coordination and log helpers)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["jwt-aws-lc"]
jwt-aws-lc = ["arco-core/jwt-aws-lc"]
jwt-rust-crypto = ["jwt-aws-lc"]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
