[package]
name = "arco-flow"
description = "Orchestration engine for Arco: DAG planning, scheduling, state machine, and execution tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
full = ["gcp", "aws", "azure"]
gcp = ["arco-core/gcp", "dep:reqwest", "dep:gcp_auth"]
aws = ["arco-core/aws"]
azure = ["arco-core/azure"]
test-utils = ["arco-core/test-utils", "dep:proptest", "dep:tempfile"]

[dependencies]
arco-core = { path = "../arco-core" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }
axum = { workspace = true }

# Time
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
humantime-serde = { workspace = true }

# Graph algorithms
petgraph = { workspace = true }

# Hashing and encoding
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base32 = { workspace = true }

# Arrow/Parquet for orchestration state projections
arrow = { workspace = true }
parquet = { workspace = true }

# IDs
ulid = { workspace = true }

# Optional test utilities
proptest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Optional GCP Cloud Tasks support
reqwest = { workspace = true, optional = true }
gcp_auth = { workspace = true, optional = true }
base64 = { workspace = true }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "plan_generation"
harness = false
