[package]
name = "arco-flow"
description = "Orchestration engine for Arco: DAG planning, scheduling, state machine, and execution tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["jwt-aws-lc"]
legacy-scheduler = []
full = ["gcp", "aws", "azure"]
http-client = ["dep:reqwest"]
gcp = ["arco-core/gcp", "http-client", "dep:gcp_auth", "dep:rustls"]
aws = ["arco-core/aws"]
azure = ["arco-core/azure"]
jwt-aws-lc = ["arco-core/jwt-aws-lc", "jsonwebtoken/aws_lc_rs", "jsonwebtoken/use_pem"]
# Compatibility alias. Arco standardizes on AWS-LC so all-features builds keep a
# single jsonwebtoken provider and avoid the RustCrypto RSA advisory.
jwt-rust-crypto = ["jwt-aws-lc"]
test-utils = ["arco-core/test-utils", "http-client", "dep:proptest", "dep:tempfile"]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }
arco-proto = { path = "../arco-proto" }
arco-worker-contract = { path = "../arco-worker-contract" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum = { workspace = true }

# Time
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
humantime-serde = { workspace = true }

# Graph algorithms
petgraph = { workspace = true }

# Hashing and encoding
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base32 = { workspace = true }

# Arrow/Parquet for orchestration state projections
arrow = { workspace = true }
parquet = { workspace = true }

# IDs
ulid = { workspace = true }

# Optional test utilities
proptest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Optional GCP Cloud Tasks support
reqwest = { workspace = true, optional = true }
gcp_auth = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"], optional = true }
base64 = { workspace = true }
jsonwebtoken = { version = "10", default-features = false }
prost-types = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "plan_generation"
harness = false
