[package]
name = "arco-integration-tests"
description = "Cross-crate integration tests for the Arco workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
# Enable IAM smoke tests (requires deployed GCP environment)
iam-smoke = []

[dependencies]
arco-api = { path = "../arco-api" }
arco-core = { path = "../arco-core" }
arco-catalog = { path = "../arco-catalog" }
arco-delta = { path = "../arco-delta" }
arco-flow = { path = "../arco-flow" }
arco-iceberg = { path = "../arco-iceberg" }

tokio = { workspace = true, features = ["full", "test-util"] }
bytes = { workspace = true }
ulid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
