[package]
name = "arco-integration-tests"
description = "Cross-crate integration tests for the Arco workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["jwt-aws-lc"]
# Enable IAM smoke tests (requires deployed GCP environment)
iam-smoke = []
jwt-aws-lc = [
    "arco-api/jwt-aws-lc",
    "arco-core/jwt-aws-lc",
    "arco-catalog/jwt-aws-lc",
    "arco-delta/jwt-aws-lc",
    "arco-flow/jwt-aws-lc",
    "arco-iceberg/jwt-aws-lc",
]
jwt-rust-crypto = ["jwt-aws-lc"]

[dependencies]
arco-api = { path = "../arco-api", default-features = false }
arco-core = { path = "../arco-core", default-features = false }
arco-catalog = { path = "../arco-catalog", default-features = false }
arco-delta = { path = "../arco-delta", default-features = false }
arco-flow = { path = "../arco-flow", default-features = false }
arco-iceberg = { path = "../arco-iceberg", default-features = false }

tokio = { workspace = true, features = ["full", "test-util"] }
bytes = { workspace = true }
ulid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
