[package]
name = "arco-test-utils"
version = "0.2.0"
edition = "2024"
description = "Shared test utilities for Arco integration tests"
publish = false

[features]
default = ["jwt-aws-lc"]
jwt-aws-lc = [
    "arco-core/jwt-aws-lc",
    "arco-catalog/jwt-aws-lc",
    "arco-flow/jwt-aws-lc",
]
jwt-rust-crypto = [
    "arco-core/jwt-rust-crypto",
    "arco-catalog/jwt-rust-crypto",
    "arco-flow/jwt-rust-crypto",
]

[dependencies]
arco-core = { path = "../arco-core", default-features = false }
arco-catalog = { path = "../arco-catalog", default-features = false }
arco-flow = { path = "../arco-flow", default-features = false }

tokio = { workspace = true, features = ["full", "test-util"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
rand = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tempfile = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
proptest = { workspace = true }
datafusion = "46"
